--- a/MLFinal Project.ipynb
+++ b/MLFinal Project.ipynb
@@ -367,7 +367,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"C:\\\\Users\\\\Laptop\\\\Documents\\\\sreerasya\\\\MS ITM\\\\Spring 24\\\\ML for business\\\\heart_attack_prediction_dataset.csv\")\n",
+    "df = pd.read_csv(\"heart_attack_prediction_dataset.csv\")\n",
     "df.head(10)"
    ]
   },
