--- a/MLFinal Project.ipynb
+++ b/MLFinal Project.ipynb
@@ -367,7 +367,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"heart_attack_prediction_dataset.csv\")\n", #Ensure you have the dataset "heart_attack_prediction_dataset.csv" in the project directory
+    "df = pd.read_csv(\"heart_attack_prediction_dataset.csv\")\n",
     "df.head(10)"
    ]
   },
